k8s/intermediate-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intermediate-master
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intermediate-master
  template:
    metadata:
      labels:
        app: intermediate-master
    spec:
      containers:
      - name: intermediate-master
        imagePullPolicy: Always
        image: opentechxdoclabs/smart_hr_system:front-end-arm64-v1 # This is the image you built in Minikube
        ports:
        - containerPort: 8011
      imagePullSecrets:
      - name: docker-registry-secret
