k8s/viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewer
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewer
  template:
    metadata:
      labels:
        app: viewer
    spec:
      containers:
      - name: viewer
        imagePullPolicy: Always
        image: opentechxdoclabs/smart_hr_system:resume-viewer-arm64-new
        ports:
        - containerPort: 8004
      imagePullSecrets:
      - name: docker-registry-secret
