k8s/client-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-master
  namespace: prod
spec:
  selector:
    app: client-master
  ports:
  - protocol: TCP
    port: 8009
    targetPort: 8009
  type: ClusterIP # Internal communication within the cluster
